# flood-risk

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: baseline_v1.yaml  data.yaml  data_kansk.yaml  scenarios.yaml  unet_v1.yaml
data/: manifest.yaml
docs/: demo-walkthrough.md  next-session-prompt.md  onboarding.md  srs.md
docs/archive/: concept.md  discovery.md  prd.md  stage2_kickoff.md
floodrisk/: __init__.py  __main__.py  app.py  feature_transform.py  normalization.py  settings.py
floodrisk/api/: routes_api.py  routes_html.py  schemas.py
floodrisk/cli/: __main__.py
floodrisk/data/: __init__.py  config.py  fetch.py  grid.py  labels_s1.py  manifest.py  permanent_water.py  pipeline.py  preprocess.py
floodrisk/db/: models.py  repositories.py  seed.py  session.py
floodrisk/inference/: __init__.py  explain.py  exporter.py  features.py  hotspots.py  online_features.py  raster.py  regions.py  registry.py  scenario.py  service.py  validation.py
floodrisk/ml/: __init__.py  baseline.py  calibrate.py  combine.py  config.py  data.py  evaluate.py  export.py  metrics.py  model.py  train.py
floodrisk/templates/: base.html  index.html
floodrisk/templates/fragments/: aggregates.html  explanation_error.html  explanation_panel.html  export_result.html  map_layer.html  predict_error.html  predict_result.html
reports/: acceptance.md  comparison_v1.md  latency.md  seed_variance.md
scripts/: benchmark_latency.py  oq8_seed_variance.py
static/: app.css  app.js
tests/: conftest.py  test_api.py  test_calibration.py  test_combine.py  test_data_pipeline.py  test_db.py  test_feature_transform.py  test_hotspots.py  test_inference.py  test_metrics_calibration.py  test_ml.py  test_normalization.py  test_online_features.py  test_preprocess_mosaic.py  test_validation.py
