[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "floodrisk"
version = "0.1.0"
description = "Прототип ИНС-оценки подверженности затоплению на открытых геоданных"
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "floodrisk authors" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "reportlab>=4.0",
    "captum>=0.7",
]

[project.optional-dependencies]
# data: подготовка датасета (Этап 1). Лёгкий набор поверх core (rasterio/geopandas
# уже в core) — ставится в runtime-.venv, БЕЗ torch-стека.
data = [
    "xarray>=2024.1.0",
    "rioxarray>=0.15",
    "cdsapi>=0.7",             # ERA5 (нужен CDS_API_KEY)
    "pandas>=2.1",
    "pyarrow>=15.0",
    "pystac-client>=0.7",      # STAC-поиск Sentinel-1 RTC
    "planetary-computer>=1.0", # подпись SAS для анонимного доступа к PC
]
# ml: обучение/исследование (Этап 2). Тяжёлый стек; ставится в ОТДЕЛЬНОЕ окружение
# (.venv-ml / docker). Включает data, т.к. тренировка читает датасет.
ml = [
    "floodrisk[data]",
    "pytorch-lightning>=2.2",
    "segmentation-models-pytorch>=0.3",
    "albumentations>=1.4",
    "mlflow>=2.10",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.4",
    "pre-commit>=3.6",
]

[project.scripts]
floodrisk = "floodrisk.cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["floodrisk"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data/", "runs/", "exports/", "mlruns/", "models/"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # длинные строки — ловим форматером, не линтером
    "B008", # FastAPI Depends() в дефолтах — норма
    # Кириллица в комментариях/строках/докстрингах: правила задуманы для отлова случайных
    # русских букв в английских идентификаторах. У нас комментарии намеренно русские.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "requires_network: тесты, требующие сетевого доступа к внешним API (CDS, Copernicus)",
    "ml_smoke: smoke-тесты ML-пайплайна (требуют extras [ml])",
]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["floodrisk"]
omit = [
    "floodrisk/ml/*",
    "floodrisk/data/fetch.py",
    "floodrisk/data/pipeline.py",
    "floodrisk/cli/*",
]
